--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,3 @@
-/**
-* Template Name: Personal - v2.5.1
-* Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
   background-color: #040404;
@@ -19,7 +9,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/Best.jpg") top right no-repeat;
+  background: #040404 url("../img/Background.png") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
