--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,8 @@ body {
   color: #fff;
   position: relative;
   background: transparent;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
 body::before {
@@ -48,6 +50,7 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
   z-index: 997;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 #header * {
@@ -303,6 +306,12 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
+::-webkit-scrollbar{
+  overflow-x: hidden;
+}
+::-webkit-scrollbar-thumb{
+  overflow: hidden;
+}
 section {
   overflow: hidden;
   position: absolute;
@@ -369,10 +378,17 @@ section .container {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+/* ::-webkit-scrollbar{
+  overflow: hidden;
+  overflow-x: hidden;
+} */
+
+
 .about-me .content h3 {
   font-weight: 700;
   font-size: 26px;
   color: #18d221;
+  
 }
 
 .about-me .content ul {
